<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_settings">Settings</string>
    <string name="intro_text">Droid Dessert</string>
    <string name="choose_a_dessert">Choose a Dessert</string>
    <string name="donut">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches">Ice\tcream sandwiches have chocolate\twafers and vanilla filling.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>

    <string	name="donut_order_message">You	ordered	a	donut.</string>
    <string	name="ice_cream_order_message">You	ordered	an	ice	cream	sandwich.</string>
    <string	name="froyo_order_message">You	ordered	a	FroYo.</string>
</resources>
